# opendxa

./: CMakeLists.txt  LICENSE.OVITO  README.md  conanfile.py  plugin.json  vpm.json
.github/workflows/: publish-plugin-binary.yml
include/volt/helpers/: burgers_circuit.h  dislocation_network.h  dxa_serialization.h  full_crystal_context.h  manifold_construction_helper.h
include/volt/pipeline/: burgers_loop_builder.h  dislocation_analysis.h  elastic_mapping.h  interface_mesh.h
lattices/: fct.yml
src/: main.cpp  plugin.cpp
src/helpers/: dislocation_network.cpp  dxa_serialization.cpp  full_crystal_context.cpp
src/pipeline/: burgers_loop_builder.cpp  delaunay_tessellation.cpp  dislocation_analysis.cpp  elastic_mapping.cpp
structures/: cementite.yml  cementite_ref.lmp  forsterite.yml  forsterite_ref.lmp
